force-app/main/default/objects/Behavior_Evaluation__c/fields/Potential_Behavior_Issues__c.field-meta.xml
<CustomField>
    <fullName>Potential_Behavior_Issues__c</fullName>
    <label>Potential Behavior Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aggression to People</fullName>
            </value>
            <value>
                <fullName>Aggression to Dogs</fullName>
            </value>
            <value>
                <fullName>Fear</fullName>
            </value>
            <value>
                <fullName>High Arousal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other:</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>