force-app/main/default/objects/Behavior_Evaluation__c/fields/Potential_Issue_Aggression_To_People__c.field-meta.xml
<CustomField>
    <fullName>Potential_Issue_Aggression_To_People__c</fullName>
    <label>Potential Issue: Aggression To People</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Potential_Behavior_Issue_Severity</valueSetName>
    </valueSet>
</CustomField>