force-app/main/default/objects/Behavior_Evaluation__c/fields/Potential_Issue_Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Potential_Issue_Other_Notes__c</fullName>
    <label>Potential Issue: Other - Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>