force-app/main/default/objects/Behavior_Evaluation__c/fields/Proceed_w_Real_Dog_Testing__c.field-meta.xml
<CustomField>
    <fullName>Proceed_w_Real_Dog_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proceed w/ Real Dog Testing</label>
    <type>Checkbox</type>
</CustomField>