force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Behavior_in_Kennel__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Behavior_in_Kennel__c</fullName>
    <label>Puppy Behavior in Kennel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Not social</fullName>
            </value>
            <value>
                <fullName>Mildly fearful</fullName>
            </value>
            <value>
                <fullName>Excited</fullName>
            </value>
            <value>
                <fullName>Stereotypic behavior</fullName>
            </value>
            <value>
                <fullName>Hyperaroused</fullName>
            </value>
            <value>
                <fullName>Moderately Fearful</fullName>
            </value>
            <value>
                <fullName>Aggressive in cage only</fullName>
            </value>
            <value>
                <fullName>Extremely fearful</fullName>
            </value>
            <value>
                <fullName>Threatened tester</fullName>
            </value>
            <value>
                <fullName>Aggressive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>