force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Behavior_on_Leash__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Behavior_on_Leash__c</fullName>
    <label>Puppy Behavior on Leash</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relaxed</fullName>
            </value>
            <value>
                <fullName>Excited</fullName>
            </value>
            <value>
                <fullName>Mildly fearful</fullName>
            </value>
            <value>
                <fullName>Moderately fearful</fullName>
            </value>
            <value>
                <fullName>Walked or balked-extremely fearful</fullName>
            </value>
            <value>
                <fullName>Panicked</fullName>
            </value>
            <value>
                <fullName>Showed aggressive behavior</fullName>
            </value>
            <value>
                <fullName>Too fearful-subtest was not done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>