force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_BIK_Housing__c.field-meta.xml
<CustomField>
    <fullName>Puppy_BIK_Housing__c</fullName>
    <label>Puppy BIK Housing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Singly-housed</fullName>
            </value>
            <value>
                <fullName>Co-housed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>