force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Child_Doll_P1__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Child_Doll_P1__c</fullName>
    <label>Puppy Child Doll P1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greeted or looked at doll-friendly</fullName>
            </value>
            <value>
                <fullName>Playful</fullName>
            </value>
            <value>
                <fullName>Mildly fearful but investigated</fullName>
            </value>
            <value>
                <fullName>Avoids doll</fullName>
                <label>Avoided doll</label>
            </value>
            <value>
                <fullName>Playful-high arousal</fullName>
            </value>
            <value>
                <fullName>Moderately fearful</fullName>
            </value>
            <value>
                <fullName>Extremely fearful</fullName>
            </value>
            <value>
                <fullName>Threatens-defensive</fullName>
                <label>Threatened – defensive</label>
            </value>
            <value>
                <fullName>Becomes aggressive-offensive</fullName>
                <label>Became aggressive – offensive</label>
            </value>
            <value>
                <fullName>Not fooled by doll</fullName>
            </value>
            <value>
                <fullName>Too fearful—subtest not done</fullName>
                <label>Too fearful – subtest not done</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>