force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Child_Doll_P2__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Child_Doll_P2__c</fullName>
    <label>Puppy Child Doll P2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relaxed-interacted with the doll</fullName>
            </value>
            <value>
                <fullName>Ignored doll</fullName>
            </value>
            <value>
                <fullName>Did not try to get away-mildly fearful</fullName>
            </value>
            <value>
                <fullName>Tried to get away-mildly fearful</fullName>
            </value>
            <value>
                <fullName>Moderately fearful</fullName>
            </value>
            <value>
                <fullName>Extremely fearful</fullName>
            </value>
            <value>
                <fullName>Threatened</fullName>
            </value>
            <value>
                <fullName>Became aggressive</fullName>
            </value>
            <value>
                <fullName>Not fooled by doll</fullName>
            </value>
            <value>
                <fullName>Too fearful—subtest not done</fullName>
            </value>
            <value>
                <fullName>Too fearful-subtest not done</fullName>
                <isActive>false</isActive>
                <label>Too fearful-subtest not done</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>