force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Comments_BOL__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Comments_BOL__c</fullName>
    <label>Puppy Comments BOL - REMOVE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>