force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Comments_CD_P2__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Comments_CD_P2__c</fullName>
    <label>Puppy Comments CD P2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>