force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Comments_DI_P1__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Comments_DI_P1__c</fullName>
    <label>Puppy Comments DI P1</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>