force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Comments_DI_P3__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Comments_DI_P3__c</fullName>
    <label>Puppy Comments DI P3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>