force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Comments_Play_Tag__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Comments_Play_Tag__c</fullName>
    <label>Puppy Comments Play Tag - REMOVE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>