force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Comments_Play_Tug_P1__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Comments_Play_Tug_P1__c</fullName>
    <label>Puppy Comments Play Tug P1 - REMOVE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>