force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Comments_Restraint__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Comments_Restraint__c</fullName>
    <label>Puppy Comments Restraint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>