force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Dog_Interaction_P2__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Dog_Interaction_P2__c</fullName>
    <label>Puppy Dog Interaction P2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Puppy_Dog_Interaction</valueSetName>
    </valueSet>
</CustomField>