force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Dog_Interaction_P3__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Dog_Interaction_P3__c</fullName>
    <label>Puppy Dog Interaction P3</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greeted, submissive interaction with adult</fullName>
            </value>
            <value>
                <fullName>Greeted, submissive-explored together with an adult dog</fullName>
            </value>
            <value>
                <fullName>Greeted, submissive-explored separately from adult dog</fullName>
            </value>
            <value>
                <fullName>Preferred to socialize with tester</fullName>
            </value>
            <value>
                <fullName>Greeted-mildly fearful</fullName>
            </value>
            <value>
                <fullName>Pushy-relaxed</fullName>
            </value>
            <value>
                <fullName>Defensive</fullName>
            </value>
            <value>
                <fullName>Ignored adult dog &amp; tester</fullName>
            </value>
            <value>
                <fullName>Pushy-did not relax</fullName>
            </value>
            <value>
                <fullName>Mounted an adult dog</fullName>
            </value>
            <value>
                <fullName>Moderately fearful</fullName>
            </value>
            <value>
                <fullName>Aggressive</fullName>
            </value>
            <value>
                <fullName>Extremely fearful</fullName>
            </value>
            <value>
                <fullName>Distracted by muzzle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>