force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Muzzled_DI_P3__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Muzzled_DI_P3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Puppy Muzzled DI P3</label>
    <type>Checkbox</type>
</CustomField>