force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Play_Tag__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Play_Tag__c</fullName>
    <label>Puppy Play Tag</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Played with tester</fullName>
            </value>
            <value>
                <fullName>Did not play but follows</fullName>
                <label>Did not play but followed</label>
            </value>
            <value>
                <fullName>Watched tester-does not follow</fullName>
                <label>Watched tester – did not follow</label>
            </value>
            <value>
                <fullName>Unresponsive-distracted by the environment</fullName>
            </value>
            <value>
                <fullName>Moderately fearful</fullName>
            </value>
            <value>
                <fullName>Highly aroused</fullName>
            </value>
            <value>
                <fullName>Extremely fearful</fullName>
            </value>
            <value>
                <fullName>Threatened</fullName>
            </value>
            <value>
                <fullName>Became aggressive</fullName>
            </value>
            <value>
                <fullName>Too fearful-subtest not done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>