force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Play_Tug_P1__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Play_Tug_P1__c</fullName>
    <label>Puppy Play Tug P1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Played with toy and/or tester</fullName>
            </value>
            <value>
                <fullName>Explored environment</fullName>
            </value>
            <value>
                <fullName>Solicited attention from tester</fullName>
            </value>
            <value>
                <fullName>Investigated toy</fullName>
            </value>
            <value>
                <fullName>Ignored toy, unresponsive</fullName>
            </value>
            <value>
                <fullName>Moderately fearful</fullName>
            </value>
            <value>
                <fullName>Highly aroused</fullName>
            </value>
            <value>
                <fullName>Extremely fearful</fullName>
            </value>
            <value>
                <fullName>Became aggressive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>