force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Play_Tug_P2__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Play_Tug_P2__c</fullName>
    <label>Puppy Play Tug P2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Played with toy</fullName>
            </value>
            <value>
                <fullName>Explored environment</fullName>
            </value>
            <value>
                <fullName>Solicited attention from the tester</fullName>
                <label>Solicited attention from tester</label>
            </value>
            <value>
                <fullName>Investigated toy</fullName>
            </value>
            <value>
                <fullName>Ignored toy, unresponsive</fullName>
            </value>
            <value>
                <fullName>Tried to keep the toy from the tester</fullName>
                <label>Tried to keep toy from tester</label>
            </value>
            <value>
                <fullName>Moderately fearful</fullName>
            </value>
            <value>
                <fullName>Refused to relinquish toy-stiff</fullName>
            </value>
            <value>
                <fullName>Extremely fearful</fullName>
            </value>
            <value>
                <fullName>Guarded toy</fullName>
            </value>
            <value>
                <fullName>Became aggressive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>