force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Resource_Guarding_P2_Touch_Face__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Resource_Guarding_P2_Touch_Face__c</fullName>
    <label>Puppy Resource Guarding P2 - Touch Face</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Puppy_Resource_Guarding_P2</valueSetName>
    </valueSet>
</CustomField>