force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Restraint__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Restraint__c</fullName>
    <label>Puppy Restraint</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remained mainly motionless - relaxed</fullName>
            </value>
            <value>
                <fullName>Remained mainly motionless - tense</fullName>
            </value>
            <value>
                <fullName>Struggled periodically - interspersed with relaxation</fullName>
            </value>
            <value>
                <fullName>Struggled periodically - interspersed with rigidity</fullName>
            </value>
            <value>
                <fullName>Struggled persistently</fullName>
            </value>
            <value>
                <fullName>Struggled and mouthy</fullName>
            </value>
            <value>
                <fullName>Struggled and had a temper tantrum</fullName>
            </value>
            <value>
                <fullName>Struggled and panicked</fullName>
            </value>
            <value>
                <fullName>Became aggressive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>