force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Skipped_RG_P1_TF__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Skipped_RG_P1_TF__c</fullName>
    <label>Puppy Skipped RG P1 TF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Skip_Reason</valueSetName>
    </valueSet>
</CustomField>