force-app/main/default/objects/Behavior_Evaluation__c/fields/Puppy_Skipped_SB_P2__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Skipped_SB_P2__c</fullName>
    <label>Puppy Skipped SB P2 - REMOVE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Skip_Reason</valueSetName>
    </valueSet>
</CustomField>